# proxy-config

./: .gitignore  .rsyncignore  Cargo.toml  LICENSE  README.en.md  README.md  SKILL.md  deploy_to_local.sh  design.md  micro-app.yml.example  projectInfo.md  proxy-config.yml.example  upload.sh
.qoder/repowiki/zh/content/: 快速开始.md  贡献指南.md
.qoder/repowiki/zh/content/命令参考/: clean 清理命令.md  network 网络命令.md  start 启动命令.md  status 状态命令.md  stop 停止命令.md  命令参考.md
.qoder/repowiki/zh/content/微应用开发/: 微应用开发.md  目录结构规范.md
.qoder/repowiki/zh/content/微应用开发/Dockerfile 开发/: Dockerfile 开发.md  基础 Dockerfile 编写.md  多阶段构建优化.md  安全最佳实践.md
.qoder/repowiki/zh/content/微应用开发/卷配置详解/: 卷映射配置.md  卷配置详解.md  安全配置考虑.md  权限管理配置.md
.qoder/repowiki/zh/content/微应用开发/应用类型开发/: API 类型应用.md  (+3 more)
.qoder/repowiki/zh/content/故障排查/: Docker 问题排查.md  Nginx 配置问题.md  常见问题.md  性能问题诊断.md  故障排查.md  日志分析.md
.qoder/repowiki/zh/content/架构设计/: 数据流设计.md  架构设计.md  系统概览.md  集成模式.md
.qoder/repowiki/zh/content/部署运维/: 备份恢复.md  性能优化.md  监控日志.md  部署指南.md  部署运维.md
.qoder/repowiki/zh/content/配置指南/: Volumns映射配置.md  主配置文件.md  微应用配置.md  配置指南.md  配置验证与错误处理.md
.qoder/repowiki/zh/content/项目概述/: 功能特性.md  安装指南.md  快速开始.md  技术栈.md  项目概述.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
docs/: acme-installation.md  certificate-application.md  micro-app-development.md  micro-app-volumes-refactor-plan.md  ssl-configuration.md
src/: builder.rs  cli.rs  compose.rs  config.rs  container.rs  discovery.rs  dockerfile.rs  error.rs  lib.rs  main.rs  micro_app_config.rs  network.rs  nginx.rs  script.rs  state.rs  volumes_config.rs
(+15 files in other folders)
