[package]
name = "micro_proxy"
version = "0.1.1"
edition = "2021"
authors = ["zongying_cao@163.com"]
description = "A tool for managing micro-applications with Docker and Nginx"
license = "MIT"
repository = "https://github.com/cao5zy/proxy-config"
readme = "README.md"
keywords = ["docker", "nginx", "proxy", "microservices", "devops"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# 序列化/反序列化
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# 配置管理
dumbo_config = "0.1"

# 命令行参数解析
clap = { version = "4.5", features = ["derive"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
log = "0.4"
dumbo_log = "0.3"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 目录遍历
walkdir = "2.5"

# Hash计算
sha2 = "0.10"

# 正则表达式
regex = "1.11"

# 异步运行时
tokio = { version = "1.0", features = ["full"] }

# 文件系统操作
fs_extra = "1.3"

# 路径计算
pathdiff = "0.2"

[dev-dependencies]
tempfile = "3.13"
